--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,6 +4,12 @@
 <body>
     <h1><%= title %></h1>
 
+    <%- include('partials/navbar.ejs') %>
+
+    <% if (typeof message !== 'undefined') { %>
+        <%= message %>
+    <% } %>
+
     <form action="/register/add" method="POST">
         <div>
             <label for="">Nome:</label>
