Finalização do crud usando NodeJs Com MongoDb

--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -9,7 +9,9 @@
     <ul>
         <% users.forEach((user)=> { %>
         <li>
-            <%= user.name %> - <%= user.email %> - Idade: <%= user.age %>
+            <%= user.name %> - <%= user.email %> - Idade: <%= user.age %> - 
+            <a href="/edit?id=<%= user._id %>"> [editar] </a>
+            <a href="/remove/<%= user._id %>"> [remover] </a>
         </li>
         <% }) %>
     </ul>
